--- a/src/views/AllGame.css
+++ b/src/views/AllGame.css
@@ -1,10 +1,9 @@
 .allGamePage{
-    max-width: 1150px;
+    max-width: 1200px;
     margin: auto;
-    background-color: red;
 }
 .gameList{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
 }
