--- a/src/views/GameInfo.css
+++ b/src/views/GameInfo.css
@@ -3,12 +3,22 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    background-color: rgba(128, 128, 128, 0.8);
     width: 100%;
     height: 100%;
     margin: 0;
 }
+.overlay{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background-color: rgba(128, 128, 128, 0.8);
+}
 .gameInfoContainer{
+    z-index: 20;
     background-color: white;
     width: 90%;
     font-size: 1.3em;
@@ -27,11 +37,17 @@
     width: 50%;
     min-width: 50%;
     max-height: 500px;
-    margin-top: 1.5em;
+    margin: 1.5em 1em 1em 1em;
 }
 .gameInfoScreenshot{
-    max-width: 90%;
-    max-height: 90%;
+    margin: auto;
+    max-width: 80%;
+    max-height: 70%;
+}
+.screenshotContainer{
+    display: flex;
+    width: 100%;
+    max-height: 500px;
 }
 .gameInfoDescription{
     padding: 0 1em ;
