--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,15 +6,16 @@
     max-width: 1200px;
     margin: auto;
     border: 5px rgb(10, 10, 10) solid;
-    color: white;
+    color: red;
 }
 .headerLogo{
     text-decoration: none;
     font-size: 1.3em;
     align-self: center;
+    color: red;
 }
 .headerLogo:visited{
-    color: white;
+    color: red;
 }
 .headerNavbar{
     align-self: center;
@@ -46,11 +47,11 @@
     padding: 3px 0;
     margin: 1px 2px;
     align-self: center;
-    color: white;
+    color: red;
     text-decoration: none;
 }
 .headerNavbarListBtn:hover{
-    background-color: rgba(255, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 .headerNavbarBtn{
     text-decoration: none;
@@ -58,9 +59,10 @@
     border: 2px black solid;
     padding: 0.3em 0.8em;
     user-select: none;
+    color: red;
 }
 .headerNavbarBtn:visited{
-    color: white;
+    color: red;
 }
 .headerNavbarBtn:hover{
     background-color: rgb(20, 20, 20);
