--- a/src/components/GameCard/NewsCard.css
+++ b/src/components/GameCard/NewsCard.css
@@ -2,8 +2,11 @@
     display: flex;
     width: 100%;
     max-width: 1200px;
-    border: 5px black solid;
-    background-color: rgba(178, 178, 178, 0.6);
+    border: 1px red solid;
+    box-shadow: 5px 5px 15px rgba(255, 20, 20, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
+    text-decoration: none;
+    color: red;
 }
 .cardImg{
     padding: 8px 8px 5px 8px;
