--- a/src/views/NewsInfo.css
+++ b/src/views/NewsInfo.css
@@ -1,8 +1,29 @@
 .newsInfoBody{
     display: flex;
+    background-color: rgba(210, 210, 210, 0.7);
+    width: 1200px;
+    margin: auto;
+    height: 100%;
+    padding: 1em 5em;
+    border: 6px black double;
+}
+.overlay{
+    display: flex;
     position: fixed;
     background-color: rgba(128, 128, 128, 0.8);
     width: 100%;
     height: 100%;
     margin: 0;
+}
+.newsSource{
+    display: flex;
+    justify-content: center;
+}
+.sourceLink{
+    text-decoration: none;
+    color: black;
+    font-size: 1.5em;
+    border: 5px black double;
+    border-radius: 30px;
+    padding: 0.1em 1em;
 }
