--- a/public/Footer.css
+++ b/public/Footer.css
@@ -1,10 +1,11 @@
 .footer{
-    margin: 2em 0 0 0;
-    position: static ;
+    margin: 0em 0 0 0;
+    position: relative;
+    width: 100%;
     height: 120px;
     z-index: 99;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     color: red;
-    padding: 1em 2em;
+    padding: 1em 0em;
 }
