--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 .appBody{
     min-height: 100vh;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url("./img/Wallpaper1.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+}
+.footerArea{
+    width: 100%;
+    bottom: 0;
 }
