--- a/src/components/GameCard/Gamecard.css
+++ b/src/components/GameCard/Gamecard.css
@@ -1,6 +1,6 @@
 .gameCard{
     margin: 0.8em 2px;
-    max-width: 365px;
+    max-width: 360px;
     box-shadow: 5px 5px 15px rgba(255, 20, 20, 0.5);
     background-color: rgba(20, 20, 20, 0.8);
     color: red;
@@ -20,4 +20,22 @@
 .gameCardFood{
     display: flex;
     padding: 1px 0 5px 3px;
+}
+.gameCardImg{
+    min-width: 365px;
+    min-height: 206px;
+}
+
+@media screen and (max-width:500px){
+    .gameCard{
+        margin: 0.8em 0;
+    }
+    .gameCardImg{
+        max-width: 100%;
+        min-width: 100%;
+    }
+    .gameImg{
+        max-width: 100%;
+    }
+
 }
