--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,14 +32,47 @@
     list-style-position: inside;
     border: 2px black solid;
 }
-
-#pcDropdown:hover #pcDropdownMenu{
-    display: flex;
+.headerNavbarList{
+    display: none;
+    flex-direction: column;
+    padding-top: 12px;
+    background-color: rgba(0, 0, 0, 0.45);
+    position: absolute;
+    z-index: 2;
+    list-style-type: none;
+    list-style-position: inside;
+    border: 2px black solid;
+}
+@media screen and (max-width:600px) {
+    .headerMobile{
+        display: flex;
+        background-color: rgba(0, 0, 0, 7);
+    }
+    .header{
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+        border: 0;
+    }
+    .headerNavbar{
+        margin: 0.5em 0 0 0;
+        flex-wrap: wrap;
+    }
+    .headerNavbarBtn{
+        margin: 0.2em 0.1em;
+    }
+}
+@media screen and (min-width:601px) {
+    #pcDropdown:hover #pcDropdownMenu{
+        display: flex;
+    }
+    
+    #browserDropdown:hover #browserDropdownMenu{
+        display: flex;
+    }
 }
 
-#browserDropdown:hover #browserDropdownMenu{
-    display: flex;
-}
+
 
 .headerNavbarListBtn{
     text-align: center;
@@ -69,4 +102,9 @@
     border: 2px rgb(50, 50, 50) solid;
     border-radius: 5px 20px;
     cursor: pointer;
+}
+@media screen and (max-width:600px) {
+    .headerNavbarListBtn{
+        background-color: rgba(0, 0, 0, 0.7);
+    }
 }
