--- a/src/views/NewsInfo.css
+++ b/src/views/NewsInfo.css
@@ -27,3 +27,24 @@
     border-radius: 30px;
     padding: 0.1em 1em;
 }
+.mobilNews{display: none;}
+
+@media screen and (max-width:1200px) {
+    .newsInfoBody{
+        width: 100%;
+        padding: 0;
+        border-left: none;
+        border-right: none;
+    }
+    .newsPage{
+        max-width: 100%;
+        padding: 0.5em 0.1em 0.1em 0.3em;
+    }
+    .newsTd{
+        max-width: 100% !important;
+    }
+}
+@media screen and (max-width:811px) {
+    .newsTd{display: none;}
+    .mobilNews{display: block;}
+}
